# consul-kube

./: .gitignore  .travis.yml  LICENSE.txt  README.md  RELEASE.md  main.py  setup.cfg  setup.py
consul_kube/commands/: __init__.py  rotate.py  validate.py
consul_kube/lib/: __init__.py  color.py  envoy.py  kube.py  tar.py  x509.py
data/: consul-pv.yaml  consul-values.yaml
scripts/: consul.sh  dind-up.sh  gke.sh  helm.sh  kube_common  simple.sh
