[metadata]
name = consul-kube
url = http://github.com/tradel/consul-kube
author = Todd Radel
author_email = todd@radel.us
description = Useful utilities to maintain HashiCorp Consul in a Kubernetes cluster
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache Software License
license_files = LICENSE.txt
classifiers =
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Topic :: System :: Systems Administration

[bdist_wheel]
universal=0

[options]
zip_safe = true
include_package_data = true
packages = find:
python_requires = ~=3.4
install_requires =
    click
    pyOpenSSL
    kubernetes
setup_requires =
    wheel
    setuptools_scm
